# krodo

./: .gitignore  .krodoignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.coda/: config.yaml
.github/workflows/: ci.yml  publish.yml
.github/workflows/scripts/: provider_e2e.py
.krodo/: config.yaml
docs/: ARCHITECTURE_DESIGN-GLM.md.archive  MODELS.md  QUICKSTART.md  architecture.md  roadmap.md
docs/benchmarks/: m9_symbol_index_linux_rerun.md  m9_symbol_index_perf.md  m9_symbol_index_perf_results.md
docs/fixes/: 001-approval-prompt-missing-tool-args.md  003-gitignore-read-policy.md
docs/reviews/: ARCHITECTURE_REVIEW_v0.2.md  ARCHITECTURE_REVIEW_v0.3.md  ARCHITECTURE_REVIEW_v0.4.md  PLAN_REVIEW_fix-subcommand-routing.md  m8_review.md  m9_closeout_plan_review.md  m9_plan_review.md
scripts/: prototype.py
src/coda/cli/: banner.py  doctor.py  group.py  main.py  repl.py  resume.py  undo.py
src/coda/core/: __init__.py  budget.py  compression.py  config.py  context.py  events.py  loop.py  recovery.py  types.py  workspace.py
src/coda/llm/: __init__.py  litellm_provider.py  protocols.py  streaming.py
src/coda/memory/: __init__.py  agents_md.py  replay.py  store.py
src/coda/obs/: __init__.py  cost.py  logger.py
src/coda/sandbox/: __init__.py  approval.py  checkpoint.py  firewall.py  ignore.py  path_filter.py  protocols.py
src/coda/tools/: __init__.py  protocols.py  registry.py
src/coda/tools/builtin/: fs.py  git.py  patch.py  search.py  shell.py
src/krodo/: __init__.py
src/krodo/cli/: banner.py  diff_preview.py  doctor.py  group.py  main.py  repl.py  resume.py  undo.py
src/krodo/core/: __init__.py  budget.py  compression.py  config.py  context.py  events.py  loop.py  recovery.py  types.py  workspace.py
src/krodo/indexer/: __init__.py  base.py  canary.py  extract.py  symbol_index.py
src/krodo/indexer/queries/: go-tags.scm  javascript-tags.scm  python-tags.scm  typescript-tags.scm
src/krodo/llm/: __init__.py  litellm_provider.py  protocols.py  streaming.py
src/krodo/memory/: __init__.py  agents_md.py  replay.py  repo_map.py  store.py
src/krodo/obs/: __init__.py  logger.py
src/krodo/sandbox/: __init__.py  approval.py  checkpoint.py  firewall.py  ignore.py  path_filter.py  protocols.py
src/krodo/tools/: __init__.py  protocols.py  registry.py
src/krodo/tools/builtin/: fs.py  git.py  patch.py  search.py  shell.py
tests/integration/: test_cli_e2e.py  test_cli_repl.py  test_cli_stdin.py  test_cli_subcommand_routing.py  test_index_session.py  test_long_session.py  test_repl_continue.py  test_repl_slash.py  test_resume_e2e.py  test_undo_e2e.py
tests/unit/: test_agents_md.py  test_apply_patch.py  test_approval.py  test_approval_persistence.py  test_budget.py  test_canary.py  test_checkpoint.py  test_cli_group.py  test_compression.py  test_config.py  test_cost.py  test_diff_preview.py  test_edit_file.py  test_events.py  test_firewall.py  test_fs_tools.py  test_git_tools.py  test_ignore.py  test_imports.py  test_indexer_lifecycle.py  test_litellm_provider.py  test_logger.py  test_loop.py  test_obs.py  test_path_filter.py  test_recovery.py  test_replay.py  test_repo_map.py  test_resume_history_display.py  test_search_tools.py  test_session_store.py  test_shell_tool.py  test_streaming.py  test_symbol_extract.py  test_symbol_index.py  test_tool_registry.py  test_undo_command.py  test_workspace.py
