[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/krodo"]

[project]
name = "krodo"
version = "0.1.1"
description = "Krodo — a local-first, multi-provider coding agent CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "The Krodo Contributors" },
]
keywords = ["coding-agent", "llm", "cli", "ai", "claude", "openai", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "gitpython>=3.1,<4",
    "httpx>=0.27,<1",
    "keyring>=25,<26",
    "litellm>=1.40,<2",
    "pathspec>=0.12,<1",
    "prompt-toolkit>=3.0,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "rich>=13,<14",
    "structlog>=24,<25",
    "tiktoken>=0.7,<1",
    "typer>=0.12,<1",
    "unidiff>=0.7,<1",
]

[project.scripts]
krodo = "krodo.cli.main:app"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-mock>=3",
    "ruff>=0.5",
    "types-pyyaml>=6.0.12.20260518",
    "vcrpy>=6",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear（捕获 mutable default、bare except 等）
    "S",      # flake8-bandit（subprocess shell=True、yaml.load、硬编码密钥等高危模式）
    "ASYNC",  # asyncio 反模式（async 函数中阻塞 sleep 等）
    "T20",    # flake8-print（禁止 print()，强制走 structlog；Day 1 可观测原则）
]
ignore = [
    "S101",   # 允许 assert（pytest 与防御式编程都需要）
    "B008",   # Typer/FastAPI pattern: function calls in argument defaults
    "ASYNC109",  # timeout as parameter name is valid (asyncio.timeout is different)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # tests 大量使用 assert
    "S105",   # tests 中可能出现"假"的 hardcoded password
    "S106",
    "S107",
    "S108",   # /tmp paths in tests are intentional
    "S603",   # subprocess calls in tests are intentional
    "S607",   # partial executable paths in tests are intentional
    "T201",   # tests 偶尔需要 print 调试
    "ASYNC221",  # blocking subprocess in async tests is fine
    "ASYNC240",  # Path methods in async tests are fine (not trio/anyio)
    "B017",   # broad exception assertions in tests are acceptable
]
"scripts/**" = [
    "T201",   # 原型脚本允许 print
]
".github/workflows/scripts/**" = [
    "T201",   # CI 脚本用 print 输出 e2e 结果
    "S603",   # subprocess 调用是 CI 脚本本职
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "provider_matrix: e2e against real LLM providers (auto-skip locally without API keys; CI runs via .github/workflows/scripts/provider_e2e.py)",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/krodo",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
branch = true
source = ["src/krodo"]
# 注：暂不 omit __init__.py（Phase 1.1 阶段它们是仅有的源文件，omit 会触发
# "no data collected" 警告）。Phase 1.2 真实代码就位后视情况再加 omit。

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
# Phase 1 目标 ≥ 90%；Phase 0 暂不强制 fail-under，等有真实代码再启用
# fail_under = 90

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
# 注：strict=true 已隐含 warn_return_any / disallow_untyped_decorators 等
